--- a/predict-energy-behavior-of-prosumers.ipynb
+++ b/predict-energy-behavior-of-prosumers.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b458fd93",
+   "id": "038f8200",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-01-08T17:26:46.188612Z",
-     "iopub.status.busy": "2024-01-08T17:26:46.187877Z",
-     "iopub.status.idle": "2024-01-08T17:26:50.246925Z",
-     "shell.execute_reply": "2024-01-08T17:26:50.245388Z"
+     "iopub.execute_input": "2024-01-08T17:33:16.461847Z",
+     "iopub.status.busy": "2024-01-08T17:33:16.461062Z",
+     "iopub.status.idle": "2024-01-08T17:33:20.593726Z",
+     "shell.execute_reply": "2024-01-08T17:33:20.592113Z"
     },
     "papermill": {
-     "duration": 4.06776,
-     "end_time": "2024-01-08T17:26:50.250521",
+     "duration": 4.139943,
+     "end_time": "2024-01-08T17:33:20.596489",
      "exception": false,
-     "start_time": "2024-01-08T17:26:46.182761",
+     "start_time": "2024-01-08T17:33:16.456546",
      "status": "completed"
     },
     "tags": []
@@ -25,35 +25,39 @@
    "outputs": [],
    "source": [
     "## import libraries\n",
-    "import os \n",
+    "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "# date and time utilities from the standard library\n",
     "from datetime import datetime, date, timedelta\n",
-    "# import enefit\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "from lightgbm import LGBMRegressor\n",
+    "# library to suppress warnings for cleaner output\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# custom library \n",
+    "# import enefit"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "68feb2da",
+   "id": "38760f03",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-08T17:26:50.261678Z",
-     "iopub.status.busy": "2024-01-08T17:26:50.260443Z",
-     "iopub.status.idle": "2024-01-08T17:26:50.266033Z",
-     "shell.execute_reply": "2024-01-08T17:26:50.265048Z"
+     "iopub.execute_input": "2024-01-08T17:33:20.602848Z",
+     "iopub.status.busy": "2024-01-08T17:33:20.602437Z",
+     "iopub.status.idle": "2024-01-08T17:33:20.607424Z",
+     "shell.execute_reply": "2024-01-08T17:33:20.606163Z"
     },
     "papermill": {
-     "duration": 0.013528,
-     "end_time": "2024-01-08T17:26:50.268601",
+     "duration": 0.010907,
+     "end_time": "2024-01-08T17:33:20.609787",
      "exception": false,
-     "start_time": "2024-01-08T17:26:50.255073",
+     "start_time": "2024-01-08T17:33:20.598880",
      "status": "completed"
     },
     "tags": []
@@ -67,19 +71,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "95213759",
+   "id": "1fa85960",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-08T17:26:50.276529Z",
-     "iopub.status.busy": "2024-01-08T17:26:50.276117Z",
-     "iopub.status.idle": "2024-01-08T17:26:50.303095Z",
-     "shell.execute_reply": "2024-01-08T17:26:50.301346Z"
+     "iopub.execute_input": "2024-01-08T17:33:20.615747Z",
+     "iopub.status.busy": "2024-01-08T17:33:20.615307Z",
+     "iopub.status.idle": "2024-01-08T17:33:20.636204Z",
+     "shell.execute_reply": "2024-01-08T17:33:20.634367Z"
     },
     "papermill": {
-     "duration": 0.034441,
-     "end_time": "2024-01-08T17:26:50.305962",
+     "duration": 0.027266,
+     "end_time": "2024-01-08T17:33:20.639237",
      "exception": false,
-     "start_time": "2024-01-08T17:26:50.271521",
+     "start_time": "2024-01-08T17:33:20.611971",
      "status": "completed"
     },
     "tags": []
@@ -124,13 +128,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7580a784",
+   "id": "cbc0fa64",
    "metadata": {
     "papermill": {
-     "duration": 0.00246,
-     "end_time": "2024-01-08T17:26:50.311279",
+     "duration": 0.001988,
+     "end_time": "2024-01-08T17:33:20.643664",
      "exception": false,
-     "start_time": "2024-01-08T17:26:50.308819",
+     "start_time": "2024-01-08T17:33:20.641676",
      "status": "completed"
     },
     "tags": []
@@ -174,14 +178,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.601312,
-   "end_time": "2024-01-08T17:26:51.136291",
+   "duration": 9.577019,
+   "end_time": "2024-01-08T17:33:21.468691",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-08T17:26:42.534979",
+   "start_time": "2024-01-08T17:33:11.891672",
    "version": "2.4.0"
   }
  },
