Kaggle Notebook | mapping-locations-and-county-code | Version 3

--- a/mapping-locations-and-county-code.ipynb
+++ b/mapping-locations-and-county-code.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "80fcae4c",
+   "id": "d29fb81e",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-01-09T17:40:27.591516Z",
-     "iopub.status.busy": "2024-01-09T17:40:27.590548Z",
-     "iopub.status.idle": "2024-01-09T17:40:28.661621Z",
-     "shell.execute_reply": "2024-01-09T17:40:28.660438Z"
+     "iopub.execute_input": "2024-01-09T18:14:46.502326Z",
+     "iopub.status.busy": "2024-01-09T18:14:46.501750Z",
+     "iopub.status.idle": "2024-01-09T18:14:47.587509Z",
+     "shell.execute_reply": "2024-01-09T18:14:47.586306Z"
     },
     "papermill": {
-     "duration": 1.079804,
-     "end_time": "2024-01-09T17:40:28.664864",
+     "duration": 1.094091,
+     "end_time": "2024-01-09T18:14:47.590494",
      "exception": false,
-     "start_time": "2024-01-09T17:40:27.585060",
+     "start_time": "2024-01-09T18:14:46.496403",
      "status": "completed"
     },
     "tags": []
@@ -37,19 +37,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dfbde0be",
+   "id": "51fd7427",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-09T17:40:28.673150Z",
-     "iopub.status.busy": "2024-01-09T17:40:28.672314Z",
-     "iopub.status.idle": "2024-01-09T17:40:58.530185Z",
-     "shell.execute_reply": "2024-01-09T17:40:58.528799Z"
+     "iopub.execute_input": "2024-01-09T18:14:47.599396Z",
+     "iopub.status.busy": "2024-01-09T18:14:47.598189Z",
+     "iopub.status.idle": "2024-01-09T18:15:17.141380Z",
+     "shell.execute_reply": "2024-01-09T18:15:17.140363Z"
     },
     "papermill": {
-     "duration": 29.865211,
-     "end_time": "2024-01-09T17:40:58.533203",
+     "duration": 29.550701,
+     "end_time": "2024-01-09T18:15:17.144488",
      "exception": false,
-     "start_time": "2024-01-09T17:40:28.667992",
+     "start_time": "2024-01-09T18:14:47.593787",
      "status": "completed"
     },
     "tags": []
@@ -76,19 +76,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1c625908",
+   "id": "82c9190a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-09T17:40:58.541853Z",
-     "iopub.status.busy": "2024-01-09T17:40:58.540785Z",
-     "iopub.status.idle": "2024-01-09T17:40:58.554180Z",
-     "shell.execute_reply": "2024-01-09T17:40:58.553315Z"
+     "iopub.execute_input": "2024-01-09T18:15:17.152269Z",
+     "iopub.status.busy": "2024-01-09T18:15:17.151852Z",
+     "iopub.status.idle": "2024-01-09T18:15:17.161331Z",
+     "shell.execute_reply": "2024-01-09T18:15:17.160279Z"
     },
     "papermill": {
-     "duration": 0.020322,
-     "end_time": "2024-01-09T17:40:58.556734",
+     "duration": 0.016352,
+     "end_time": "2024-01-09T18:15:17.163959",
      "exception": false,
-     "start_time": "2024-01-09T17:40:58.536412",
+     "start_time": "2024-01-09T18:15:17.147607",
      "status": "completed"
     },
     "tags": []
@@ -116,19 +116,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8a748b38",
+   "id": "6910cd75",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-09T17:40:58.564508Z",
-     "iopub.status.busy": "2024-01-09T17:40:58.564073Z",
-     "iopub.status.idle": "2024-01-09T17:40:58.570768Z",
-     "shell.execute_reply": "2024-01-09T17:40:58.569632Z"
+     "iopub.execute_input": "2024-01-09T18:15:17.172040Z",
+     "iopub.status.busy": "2024-01-09T18:15:17.171629Z",
+     "iopub.status.idle": "2024-01-09T18:15:17.178200Z",
+     "shell.execute_reply": "2024-01-09T18:15:17.177052Z"
     },
     "papermill": {
-     "duration": 0.013302,
-     "end_time": "2024-01-09T17:40:58.573125",
+     "duration": 0.014009,
+     "end_time": "2024-01-09T18:15:17.181178",
      "exception": false,
-     "start_time": "2024-01-09T17:40:58.559823",
+     "start_time": "2024-01-09T18:15:17.167169",
      "status": "completed"
     },
     "tags": []
@@ -159,20 +159,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e2c1f153",
+   "execution_count": 5,
+   "id": "2b97e99c",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-09T18:15:17.189298Z",
+     "iopub.status.busy": "2024-01-09T18:15:17.188919Z",
+     "iopub.status.idle": "2024-01-09T18:15:17.211391Z",
+     "shell.execute_reply": "2024-01-09T18:15:17.210399Z"
+    },
     "papermill": {
-     "duration": 0.002698,
-     "end_time": "2024-01-09T17:40:58.579008",
+     "duration": 0.029687,
+     "end_time": "2024-01-09T18:15:17.214019",
      "exception": false,
-     "start_time": "2024-01-09T17:40:58.576310",
+     "start_time": "2024-01-09T18:15:17.184332",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#### map codes and locations\n",
+    "name_mapping = {\n",
+    "    \"valga\": \"valg\",\n",
+    "    \"põlva\": \"põlv\",\n",
+    "    \"jõgeva\": \"jõgev\",\n",
+    "    \"rapla\": \"rapl\",\n",
+    "    \"järva\": \"järv\"\n",
+    "}\n",
+    "\n",
+    "# initialize the geocoder once, outside the loop\n",
+    "geoLoc = Nominatim(user_agent='GetLoc')\n",
+    "\n",
+    "# loop through each row with unique latitude and longitude values\n",
+    "#for coords in forecast_weather[['latitude', 'longitude']].drop_duplicates()"
+   ]
   }
  ],
  "metadata": {
@@ -210,14 +231,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 36.220663,
-   "end_time": "2024-01-09T17:40:59.205131",
+   "duration": 35.870597,
+   "end_time": "2024-01-09T18:15:17.839546",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-09T17:40:22.984468",
+   "start_time": "2024-01-09T18:14:41.968949",
    "version": "2.4.0"
   }
  },
