Kaggle Notebook | mapping-locations-and-county-code | Version 5

--- a/mapping-locations-and-county-code.ipynb
+++ b/mapping-locations-and-county-code.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d29fb81e",
+   "id": "dadcdf81",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-01-09T18:14:46.502326Z",
-     "iopub.status.busy": "2024-01-09T18:14:46.501750Z",
-     "iopub.status.idle": "2024-01-09T18:14:47.587509Z",
-     "shell.execute_reply": "2024-01-09T18:14:47.586306Z"
+     "iopub.execute_input": "2024-01-10T05:47:57.249509Z",
+     "iopub.status.busy": "2024-01-10T05:47:57.248789Z",
+     "iopub.status.idle": "2024-01-10T05:47:57.842382Z",
+     "shell.execute_reply": "2024-01-10T05:47:57.841417Z"
     },
     "papermill": {
-     "duration": 1.094091,
-     "end_time": "2024-01-09T18:14:47.590494",
+     "duration": 0.600803,
+     "end_time": "2024-01-10T05:47:57.844944",
      "exception": false,
-     "start_time": "2024-01-09T18:14:46.496403",
+     "start_time": "2024-01-10T05:47:57.244141",
      "status": "completed"
     },
     "tags": []
@@ -37,19 +37,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "51fd7427",
+   "id": "195cb5b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-09T18:14:47.599396Z",
-     "iopub.status.busy": "2024-01-09T18:14:47.598189Z",
-     "iopub.status.idle": "2024-01-09T18:15:17.141380Z",
-     "shell.execute_reply": "2024-01-09T18:15:17.140363Z"
+     "iopub.execute_input": "2024-01-10T05:47:57.852188Z",
+     "iopub.status.busy": "2024-01-10T05:47:57.851678Z",
+     "iopub.status.idle": "2024-01-10T05:48:25.902231Z",
+     "shell.execute_reply": "2024-01-10T05:48:25.900941Z"
     },
     "papermill": {
-     "duration": 29.550701,
-     "end_time": "2024-01-09T18:15:17.144488",
+     "duration": 28.057329,
+     "end_time": "2024-01-10T05:48:25.905088",
      "exception": false,
-     "start_time": "2024-01-09T18:14:47.593787",
+     "start_time": "2024-01-10T05:47:57.847759",
      "status": "completed"
     },
     "tags": []
@@ -76,19 +76,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "82c9190a",
+   "id": "1c0f3473",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-09T18:15:17.152269Z",
-     "iopub.status.busy": "2024-01-09T18:15:17.151852Z",
-     "iopub.status.idle": "2024-01-09T18:15:17.161331Z",
-     "shell.execute_reply": "2024-01-09T18:15:17.160279Z"
+     "iopub.execute_input": "2024-01-10T05:48:25.912133Z",
+     "iopub.status.busy": "2024-01-10T05:48:25.911730Z",
+     "iopub.status.idle": "2024-01-10T05:48:25.924717Z",
+     "shell.execute_reply": "2024-01-10T05:48:25.923183Z"
     },
     "papermill": {
-     "duration": 0.016352,
-     "end_time": "2024-01-09T18:15:17.163959",
+     "duration": 0.019324,
+     "end_time": "2024-01-10T05:48:25.927091",
      "exception": false,
-     "start_time": "2024-01-09T18:15:17.147607",
+     "start_time": "2024-01-10T05:48:25.907767",
      "status": "completed"
     },
     "tags": []
@@ -116,19 +116,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6910cd75",
+   "id": "64e9f82e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-09T18:15:17.172040Z",
-     "iopub.status.busy": "2024-01-09T18:15:17.171629Z",
-     "iopub.status.idle": "2024-01-09T18:15:17.178200Z",
-     "shell.execute_reply": "2024-01-09T18:15:17.177052Z"
+     "iopub.execute_input": "2024-01-10T05:48:25.934689Z",
+     "iopub.status.busy": "2024-01-10T05:48:25.934278Z",
+     "iopub.status.idle": "2024-01-10T05:48:25.940416Z",
+     "shell.execute_reply": "2024-01-10T05:48:25.939238Z"
     },
     "papermill": {
-     "duration": 0.014009,
-     "end_time": "2024-01-09T18:15:17.181178",
+     "duration": 0.013091,
+     "end_time": "2024-01-10T05:48:25.943197",
      "exception": false,
-     "start_time": "2024-01-09T18:15:17.167169",
+     "start_time": "2024-01-10T05:48:25.930106",
      "status": "completed"
     },
     "tags": []
@@ -160,24 +160,35 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2b97e99c",
+   "id": "c8a6861a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-09T18:15:17.189298Z",
-     "iopub.status.busy": "2024-01-09T18:15:17.188919Z",
-     "iopub.status.idle": "2024-01-09T18:15:17.211391Z",
-     "shell.execute_reply": "2024-01-09T18:15:17.210399Z"
+     "iopub.execute_input": "2024-01-10T05:48:25.950841Z",
+     "iopub.status.busy": "2024-01-10T05:48:25.950420Z",
+     "iopub.status.idle": "2024-01-10T05:48:25.972257Z",
+     "shell.execute_reply": "2024-01-10T05:48:25.971203Z"
     },
     "papermill": {
-     "duration": 0.029687,
-     "end_time": "2024-01-09T18:15:17.214019",
+     "duration": 0.028247,
+     "end_time": "2024-01-10T05:48:25.974305",
      "exception": false,
-     "start_time": "2024-01-09T18:15:17.184332",
+     "start_time": "2024-01-10T05:48:25.946058",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"# loop through each row with unique latitude and longitude values\\nfor coords in forecast_weather[['latitude', 'longitude']].drop_duplicates().itertuples(index=False):\\n    # get latitude and longitude\\n    lat, lon = coords[0], coords[1]\\n    \\n    # get the location information for the current coordinates\\n    locname = geoLoc.reverse((lat, lon), exactly_one=True)\\n    \\n    # if a location is found and it's in Estonia, process and output the information\\n    if locname and locname.raw.get('address', {}).get('county') == 'Eesti':\\n        county_name = locname.raw['address'].get('county', '')\\n\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#### map codes and locations\n",
     "name_mapping = {\n",
@@ -191,9 +202,36 @@
     "# initialize the geocoder once, outside the loop\n",
     "geoLoc = Nominatim(user_agent='GetLoc')\n",
     "\n",
-    "# loop through each row with unique latitude and longitude values\n",
-    "#for coords in forecast_weather[['latitude', 'longitude']].drop_duplicates()"
+    "'''# loop through each row with unique latitude and longitude values\n",
+    "for coords in forecast_weather[['latitude', 'longitude']].drop_duplicates().itertuples(index=False):\n",
+    "    # get latitude and longitude\n",
+    "    lat, lon = coords[0], coords[1]\n",
+    "    \n",
+    "    # get the location information for the current coordinates\n",
+    "    locname = geoLoc.reverse((lat, lon), exactly_one=True)\n",
+    "    \n",
+    "    # if a location is found and it's in Estonia, process and output the information\n",
+    "    if locname and locname.raw.get('address', {}).get('county') == 'Eesti':\n",
+    "        county_name = locname.raw['address'].get('county', '')\n",
+    "'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cb5f8d5",
+   "metadata": {
+    "papermill": {
+     "duration": 0.002558,
+     "end_time": "2024-01-10T05:48:25.979714",
+     "exception": false,
+     "start_time": "2024-01-10T05:48:25.977156",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -231,14 +269,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 35.870597,
-   "end_time": "2024-01-09T18:15:17.839546",
+   "duration": 32.487982,
+   "end_time": "2024-01-10T05:48:26.603324",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-09T18:14:41.968949",
+   "start_time": "2024-01-10T05:47:54.115342",
    "version": "2.4.0"
   }
  },
