Kaggle Notebook | mapping-locations-and-county-code | Version 6

--- a/mapping-locations-and-county-code.ipynb
+++ b/mapping-locations-and-county-code.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dadcdf81",
+   "id": "077e00f9",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-01-10T05:47:57.249509Z",
-     "iopub.status.busy": "2024-01-10T05:47:57.248789Z",
-     "iopub.status.idle": "2024-01-10T05:47:57.842382Z",
-     "shell.execute_reply": "2024-01-10T05:47:57.841417Z"
+     "iopub.execute_input": "2024-01-11T05:42:35.900465Z",
+     "iopub.status.busy": "2024-01-11T05:42:35.899668Z",
+     "iopub.status.idle": "2024-01-11T05:42:36.973477Z",
+     "shell.execute_reply": "2024-01-11T05:42:36.972278Z"
     },
     "papermill": {
-     "duration": 0.600803,
-     "end_time": "2024-01-10T05:47:57.844944",
+     "duration": 1.081355,
+     "end_time": "2024-01-11T05:42:36.976252",
      "exception": false,
-     "start_time": "2024-01-10T05:47:57.244141",
+     "start_time": "2024-01-11T05:42:35.894897",
      "status": "completed"
     },
     "tags": []
@@ -28,33 +28,41 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "import json\n",
-    "# geopy is a Python library for locating the coordinates of \n",
-    "# addresses, cities, countries, and landmarks across the globe\n",
-    "# using different geocoding services and Nominatim is one of those services.\n",
+    "# geopy is a Python library for locating the coordinates of addresses\n",
+    "# import Nominatim class from geopy library to use for geocoding \n",
+    "# addresses into latitude and longitude.\n",
     "from geopy.geocoders import Nominatim"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "195cb5b9",
+   "id": "5efc1602",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T05:47:57.852188Z",
-     "iopub.status.busy": "2024-01-10T05:47:57.851678Z",
-     "iopub.status.idle": "2024-01-10T05:48:25.902231Z",
-     "shell.execute_reply": "2024-01-10T05:48:25.900941Z"
+     "iopub.execute_input": "2024-01-11T05:42:36.983056Z",
+     "iopub.status.busy": "2024-01-11T05:42:36.982510Z",
+     "iopub.status.idle": "2024-01-11T05:43:01.753403Z",
+     "shell.execute_reply": "2024-01-11T05:43:01.752319Z"
     },
     "papermill": {
-     "duration": 28.057329,
-     "end_time": "2024-01-10T05:48:25.905088",
+     "duration": 24.776876,
+     "end_time": "2024-01-11T05:43:01.755758",
      "exception": false,
-     "start_time": "2024-01-10T05:47:57.847759",
+     "start_time": "2024-01-11T05:42:36.978882",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['client', 'gas_prices', 'electricity_prices', 'weather_station_to_county_mapping', 'historical_weather', 'train', 'forecast_weather'])\n"
+     ]
+    }
+   ],
    "source": [
     "#### load all CSV files\n",
     "folder_path = '/kaggle/input/predict-energy-behavior-of-prosumers'\n",
@@ -62,7 +70,7 @@
     "csv_files = Path(folder_path).glob(\"*.csv\")\n",
     "\n",
     "# initialize an empty dictionary to store the DataFrames\n",
-    "dataframes = {}\n",
+    "files = {}\n",
     "\n",
     "# loop through each CSV file found\n",
     "for csv_file in csv_files:\n",
@@ -70,25 +78,27 @@
     "    variable_name = csv_file.stem\n",
     "    \n",
     "    # read the CSV file and assign its DataFrame to the dictionary with the key\n",
-    "    dataframes[variable_name] = pd.read_csv(csv_file)"
+    "    files[variable_name] = pd.read_csv(csv_file)\n",
+    "    \n",
+    "print(files.keys())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1c0f3473",
+   "id": "a4f75db9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T05:48:25.912133Z",
-     "iopub.status.busy": "2024-01-10T05:48:25.911730Z",
-     "iopub.status.idle": "2024-01-10T05:48:25.924717Z",
-     "shell.execute_reply": "2024-01-10T05:48:25.923183Z"
+     "iopub.execute_input": "2024-01-11T05:43:01.762931Z",
+     "iopub.status.busy": "2024-01-11T05:43:01.761867Z",
+     "iopub.status.idle": "2024-01-11T05:43:01.773849Z",
+     "shell.execute_reply": "2024-01-11T05:43:01.772780Z"
     },
     "papermill": {
-     "duration": 0.019324,
-     "end_time": "2024-01-10T05:48:25.927091",
+     "duration": 0.017887,
+     "end_time": "2024-01-11T05:43:01.776173",
      "exception": false,
-     "start_time": "2024-01-10T05:48:25.907767",
+     "start_time": "2024-01-11T05:43:01.758286",
      "status": "completed"
     },
     "tags": []
@@ -116,19 +126,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "64e9f82e",
+   "id": "72194972",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T05:48:25.934689Z",
-     "iopub.status.busy": "2024-01-10T05:48:25.934278Z",
-     "iopub.status.idle": "2024-01-10T05:48:25.940416Z",
-     "shell.execute_reply": "2024-01-10T05:48:25.939238Z"
+     "iopub.execute_input": "2024-01-11T05:43:01.783284Z",
+     "iopub.status.busy": "2024-01-11T05:43:01.782642Z",
+     "iopub.status.idle": "2024-01-11T05:43:01.788766Z",
+     "shell.execute_reply": "2024-01-11T05:43:01.787856Z"
     },
     "papermill": {
-     "duration": 0.013091,
-     "end_time": "2024-01-10T05:48:25.943197",
+     "duration": 0.013221,
+     "end_time": "2024-01-11T05:43:01.791961",
      "exception": false,
-     "start_time": "2024-01-10T05:48:25.930106",
+     "start_time": "2024-01-11T05:43:01.778740",
      "status": "completed"
     },
     "tags": []
@@ -147,7 +157,7 @@
     "# initialize an empty dictionary\n",
     "parsed_counties = {}\n",
     "\n",
-    "# loop through each pair in the original dictionary\n",
+    "# loop through each key-value pair in the original dictionary\n",
     "for code, name in county_codes.items():\n",
     "    # process the name, make it lowercase and remove trailing 'maa'\n",
     "    processed_name = name.lower().rstrip('maa')\n",
@@ -160,37 +170,109 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c8a6861a",
+   "id": "76d8ef91",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T05:48:25.950841Z",
-     "iopub.status.busy": "2024-01-10T05:48:25.950420Z",
-     "iopub.status.idle": "2024-01-10T05:48:25.972257Z",
-     "shell.execute_reply": "2024-01-10T05:48:25.971203Z"
+     "iopub.execute_input": "2024-01-11T05:43:01.798594Z",
+     "iopub.status.busy": "2024-01-11T05:43:01.798240Z",
+     "iopub.status.idle": "2024-01-11T05:43:58.029643Z",
+     "shell.execute_reply": "2024-01-11T05:43:58.028404Z"
     },
     "papermill": {
-     "duration": 0.028247,
-     "end_time": "2024-01-10T05:48:25.974305",
+     "duration": 56.238173,
+     "end_time": "2024-01-11T05:43:58.032699",
      "exception": false,
-     "start_time": "2024-01-10T05:48:25.946058",
+     "start_time": "2024-01-11T05:43:01.794526",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"# loop through each row with unique latitude and longitude values\\nfor coords in forecast_weather[['latitude', 'longitude']].drop_duplicates().itertuples(index=False):\\n    # get latitude and longitude\\n    lat, lon = coords[0], coords[1]\\n    \\n    # get the location information for the current coordinates\\n    locname = geoLoc.reverse((lat, lon), exactly_one=True)\\n    \\n    # if a location is found and it's in Estonia, process and output the information\\n    if locname and locname.raw.get('address', {}).get('county') == 'Eesti':\\n        county_name = locname.raw['address'].get('county', '')\\n\""
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "county: 'saare', county code: 10 (57.6, 23.2)\n",
+      "county: 'võru', county code: 15 (57.6, 26.7)\n",
+      "county: 'võru', county code: 15 (57.6, 27.2)\n",
+      "county: 'saare', county code: 10 (57.9, 21.7)\n",
+      "county: 'saare', county code: 10 (57.9, 22.2)\n",
+      "county: 'saare', county code: 10 (57.9, 23.2)\n",
+      "county: 'pärnu', county code: 7 (57.9, 23.7)\n",
+      "county: 'pärnu', county code: 7 (57.9, 24.2)\n",
+      "county: 'valg', county code: 13 (57.9, 26.2)\n",
+      "county: 'võru', county code: 15 (57.9, 26.7)\n",
+      "county: 'võru', county code: 15 (57.9, 27.2)\n",
+      "county: 'võru', county code: 15 (57.9, 27.7)\n",
+      "county: 'saare', county code: 10 (58.2, 21.7)\n",
+      "county: 'saare', county code: 10 (58.2, 22.2)\n",
+      "county: 'saare', county code: 10 (58.2, 22.7)\n",
+      "county: 'saare', county code: 10 (58.2, 23.2)\n",
+      "county: 'pärnu', county code: 7 (58.2, 23.7)\n",
+      "county: 'pärnu', county code: 7 (58.2, 24.2)\n",
+      "county: 'pärnu', county code: 7 (58.2, 24.7)\n",
+      "county: 'pärnu', county code: 7 (58.2, 25.2)\n",
+      "county: 'viljandi', county code: 14 (58.2, 25.7)\n",
+      "county: 'tartu', county code: 11 (58.2, 26.2)\n",
+      "county: 'tartu', county code: 11 (58.2, 26.7)\n",
+      "county: 'põlv', county code: 8 (58.2, 27.2)\n",
+      "county: 'saare', county code: 10 (58.5, 21.7)\n",
+      "county: 'saare', county code: 10 (58.5, 22.2)\n",
+      "county: 'saare', county code: 10 (58.5, 22.7)\n",
+      "county: 'saare', county code: 10 (58.5, 23.2)\n",
+      "county: 'pärnu', county code: 7 (58.5, 23.7)\n",
+      "county: 'pärnu', county code: 7 (58.5, 24.2)\n",
+      "county: 'pärnu', county code: 7 (58.5, 24.7)\n",
+      "county: 'viljandi', county code: 14 (58.5, 25.2)\n",
+      "county: 'viljandi', county code: 14 (58.5, 25.7)\n",
+      "county: 'jõgev', county code: 4 (58.5, 26.2)\n",
+      "county: 'tartu', county code: 11 (58.5, 26.7)\n",
+      "county: 'tartu', county code: 11 (58.5, 27.2)\n",
+      "county: 'hiiu', county code: 1 (58.8, 21.7)\n",
+      "county: 'hiiu', county code: 1 (58.8, 22.2)\n",
+      "county: 'hiiu', county code: 1 (58.8, 22.7)\n",
+      "county: 'hiiu', county code: 1 (58.8, 23.2)\n",
+      "county: 'lääne', county code: 6 (58.8, 23.7)\n",
+      "county: 'rapl', county code: 9 (58.8, 24.2)\n",
+      "county: 'rapl', county code: 9 (58.8, 24.7)\n",
+      "county: 'järv', county code: 3 (58.8, 25.2)\n",
+      "county: 'järv', county code: 3 (58.8, 25.7)\n",
+      "county: 'jõgev', county code: 4 (58.8, 26.2)\n",
+      "county: 'jõgev', county code: 4 (58.8, 26.7)\n",
+      "county: 'jõgev', county code: 4 (58.8, 27.2)\n",
+      "county: 'hiiu', county code: 1 (59.1, 22.2)\n",
+      "county: 'hiiu', county code: 1 (59.1, 22.7)\n",
+      "county: 'lääne', county code: 6 (59.1, 23.2)\n",
+      "county: 'lääne', county code: 6 (59.1, 23.7)\n",
+      "county: 'harju', county code: 0 (59.1, 24.2)\n",
+      "county: 'rapl', county code: 9 (59.1, 24.7)\n",
+      "county: 'harju', county code: 0 (59.1, 25.2)\n",
+      "county: 'järv', county code: 3 (59.1, 25.7)\n",
+      "county: 'lääne-viru', county code: 5 (59.1, 26.2)\n",
+      "county: 'lääne-viru', county code: 5 (59.1, 26.7)\n",
+      "county: 'ida-viru', county code: 2 (59.1, 27.2)\n",
+      "county: 'ida-viru', county code: 2 (59.1, 27.7)\n",
+      "county: 'lääne', county code: 6 (59.4, 23.2)\n",
+      "county: 'harju', county code: 0 (59.4, 23.7)\n",
+      "county: 'harju', county code: 0 (59.4, 24.2)\n",
+      "county: 'harju', county code: 0 (59.4, 24.7)\n",
+      "county: 'harju', county code: 0 (59.4, 25.2)\n",
+      "county: 'harju', county code: 0 (59.4, 25.7)\n",
+      "county: 'lääne-viru', county code: 5 (59.4, 26.2)\n",
+      "county: 'lääne-viru', county code: 5 (59.4, 26.7)\n",
+      "county: 'ida-viru', county code: 2 (59.4, 27.2)\n",
+      "county: 'ida-viru', county code: 2 (59.4, 27.7)\n",
+      "county: 'harju', county code: 0 (59.7, 24.7)\n",
+      "county: 'harju', county code: 0 (59.7, 25.2)\n",
+      "county: 'harju', county code: 0 (59.7, 25.7)\n",
+      "county: 'lääne-viru', county code: 5 (59.7, 26.2)\n",
+      "county: 'lääne-viru', county code: 5 (59.7, 26.7)\n"
+     ]
     }
    ],
    "source": [
     "#### map codes and locations\n",
+    "# a dictionary that maps full country names to their shortened versions\n",
     "name_mapping = {\n",
     "    \"valga\": \"valg\",\n",
     "    \"põlva\": \"põlv\",\n",
@@ -199,39 +281,26 @@
     "    \"järva\": \"järv\"\n",
     "}\n",
     "\n",
-    "# initialize the geocoder once, outside the loop\n",
+    "# initialize the geocoder\n",
     "geoLoc = Nominatim(user_agent='GetLoc')\n",
     "\n",
-    "'''# loop through each row with unique latitude and longitude values\n",
-    "for coords in forecast_weather[['latitude', 'longitude']].drop_duplicates().itertuples(index=False):\n",
-    "    # get latitude and longitude\n",
+    "# loop through each row with unique latitude and longitude values\n",
+    "for coords in files['forecast_weather'][['latitude', 'longitude']].drop_duplicates().itertuples(index=False):\n",
+    "    # extract latitude and longitude from the current row\n",
     "    lat, lon = coords[0], coords[1]\n",
     "    \n",
-    "    # get the location information for the current coordinates\n",
-    "    locname = geoLoc.reverse((lat, lon), exactly_one=True)\n",
+    "    # use the geocoder to get the location information for the current coordinates\n",
+    "    locname = geoLoc.reverse((lat, lon))\n",
     "    \n",
-    "    # if a location is found and it's in Estonia, process and output the information\n",
-    "    if locname and locname.raw.get('address', {}).get('county') == 'Eesti':\n",
-    "        county_name = locname.raw['address'].get('county', '')\n",
-    "'''"
+    "    # access raw JSON file which is in python dictionary format,\n",
+    "    # using get() to access key in the dictionary\n",
+    "    if locname and locname.raw.get('address', {}).get('country') == \"Eesti\":\n",
+    "        county_name = locname.raw['address'].get('county', '').split()[0].lower()\n",
+    "        # Use a name mapping dictionary or the original county name if not found\n",
+    "        county_name_mapped = name_mapping.get(county_name, county_name)\n",
+    "        # Output the county information\n",
+    "        print(f\"county: '{county_name_mapped}', county code:\", parsed_counties[county_name_mapped], (lat, lon))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cb5f8d5",
-   "metadata": {
-    "papermill": {
-     "duration": 0.002558,
-     "end_time": "2024-01-10T05:48:25.979714",
-     "exception": false,
-     "start_time": "2024-01-10T05:48:25.977156",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -269,14 +338,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 32.487982,
-   "end_time": "2024-01-10T05:48:26.603324",
+   "duration": 86.121685,
+   "end_time": "2024-01-11T05:43:58.663894",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-10T05:47:54.115342",
+   "start_time": "2024-01-11T05:42:32.542209",
    "version": "2.4.0"
   }
  },
