Kaggle Notebook | mapping-locations-and-county-code | Version 7

--- a/mapping-locations-and-county-code.ipynb
+++ b/mapping-locations-and-county-code.ipynb
@@ -1,23 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d0ad7656",
+   "metadata": {
+    "papermill": {
+     "duration": 0.002953,
+     "end_time": "2024-01-11T05:49:07.562456",
+     "exception": false,
+     "start_time": "2024-01-11T05:49:07.559503",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "### This file maps the locations listed in forecast_weather.csv to their corresponding counties."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "077e00f9",
+   "id": "cb973507",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-01-11T05:42:35.900465Z",
-     "iopub.status.busy": "2024-01-11T05:42:35.899668Z",
-     "iopub.status.idle": "2024-01-11T05:42:36.973477Z",
-     "shell.execute_reply": "2024-01-11T05:42:36.972278Z"
+     "iopub.execute_input": "2024-01-11T05:49:07.570111Z",
+     "iopub.status.busy": "2024-01-11T05:49:07.569543Z",
+     "iopub.status.idle": "2024-01-11T05:49:08.643525Z",
+     "shell.execute_reply": "2024-01-11T05:49:08.642009Z"
     },
     "papermill": {
-     "duration": 1.081355,
-     "end_time": "2024-01-11T05:42:36.976252",
+     "duration": 1.082046,
+     "end_time": "2024-01-11T05:49:08.647249",
      "exception": false,
-     "start_time": "2024-01-11T05:42:35.894897",
+     "start_time": "2024-01-11T05:49:07.565203",
      "status": "completed"
     },
     "tags": []
@@ -37,19 +54,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5efc1602",
+   "id": "0564e4ef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-11T05:42:36.983056Z",
-     "iopub.status.busy": "2024-01-11T05:42:36.982510Z",
-     "iopub.status.idle": "2024-01-11T05:43:01.753403Z",
-     "shell.execute_reply": "2024-01-11T05:43:01.752319Z"
+     "iopub.execute_input": "2024-01-11T05:49:08.654772Z",
+     "iopub.status.busy": "2024-01-11T05:49:08.654209Z",
+     "iopub.status.idle": "2024-01-11T05:49:37.758858Z",
+     "shell.execute_reply": "2024-01-11T05:49:37.757476Z"
     },
     "papermill": {
-     "duration": 24.776876,
-     "end_time": "2024-01-11T05:43:01.755758",
+     "duration": 29.11124,
+     "end_time": "2024-01-11T05:49:37.761213",
      "exception": false,
-     "start_time": "2024-01-11T05:42:36.978882",
+     "start_time": "2024-01-11T05:49:08.649973",
      "status": "completed"
     },
     "tags": []
@@ -86,19 +103,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a4f75db9",
+   "id": "91f7e4c2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-11T05:43:01.762931Z",
-     "iopub.status.busy": "2024-01-11T05:43:01.761867Z",
-     "iopub.status.idle": "2024-01-11T05:43:01.773849Z",
-     "shell.execute_reply": "2024-01-11T05:43:01.772780Z"
+     "iopub.execute_input": "2024-01-11T05:49:37.768535Z",
+     "iopub.status.busy": "2024-01-11T05:49:37.768158Z",
+     "iopub.status.idle": "2024-01-11T05:49:37.780986Z",
+     "shell.execute_reply": "2024-01-11T05:49:37.779764Z"
     },
     "papermill": {
-     "duration": 0.017887,
-     "end_time": "2024-01-11T05:43:01.776173",
+     "duration": 0.019418,
+     "end_time": "2024-01-11T05:49:37.783654",
      "exception": false,
-     "start_time": "2024-01-11T05:43:01.758286",
+     "start_time": "2024-01-11T05:49:37.764236",
      "status": "completed"
     },
     "tags": []
@@ -126,19 +143,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "72194972",
+   "id": "c71938e9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-11T05:43:01.783284Z",
-     "iopub.status.busy": "2024-01-11T05:43:01.782642Z",
-     "iopub.status.idle": "2024-01-11T05:43:01.788766Z",
-     "shell.execute_reply": "2024-01-11T05:43:01.787856Z"
+     "iopub.execute_input": "2024-01-11T05:49:37.791120Z",
+     "iopub.status.busy": "2024-01-11T05:49:37.790714Z",
+     "iopub.status.idle": "2024-01-11T05:49:37.797295Z",
+     "shell.execute_reply": "2024-01-11T05:49:37.795963Z"
     },
     "papermill": {
-     "duration": 0.013221,
-     "end_time": "2024-01-11T05:43:01.791961",
+     "duration": 0.013225,
+     "end_time": "2024-01-11T05:49:37.799792",
      "exception": false,
-     "start_time": "2024-01-11T05:43:01.778740",
+     "start_time": "2024-01-11T05:49:37.786567",
      "status": "completed"
     },
     "tags": []
@@ -170,19 +187,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "76d8ef91",
+   "id": "3e21cda8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-11T05:43:01.798594Z",
-     "iopub.status.busy": "2024-01-11T05:43:01.798240Z",
-     "iopub.status.idle": "2024-01-11T05:43:58.029643Z",
-     "shell.execute_reply": "2024-01-11T05:43:58.028404Z"
+     "iopub.execute_input": "2024-01-11T05:49:37.807654Z",
+     "iopub.status.busy": "2024-01-11T05:49:37.807247Z",
+     "iopub.status.idle": "2024-01-11T05:50:35.711947Z",
+     "shell.execute_reply": "2024-01-11T05:50:35.710689Z"
     },
     "papermill": {
-     "duration": 56.238173,
-     "end_time": "2024-01-11T05:43:58.032699",
+     "duration": 57.9126,
+     "end_time": "2024-01-11T05:50:35.715561",
      "exception": false,
-     "start_time": "2024-01-11T05:43:01.794526",
+     "start_time": "2024-01-11T05:49:37.802961",
      "status": "completed"
     },
     "tags": []
@@ -296,9 +313,9 @@
     "    # using get() to access key in the dictionary\n",
     "    if locname and locname.raw.get('address', {}).get('country') == \"Eesti\":\n",
     "        county_name = locname.raw['address'].get('county', '').split()[0].lower()\n",
-    "        # Use a name mapping dictionary or the original county name if not found\n",
+    "        # use a name mapping dictionary or the original county name if not found\n",
     "        county_name_mapped = name_mapping.get(county_name, county_name)\n",
-    "        # Output the county information\n",
+    "        # output the county information\n",
     "        print(f\"county: '{county_name_mapped}', county code:\", parsed_counties[county_name_mapped], (lat, lon))"
    ]
   }
@@ -338,14 +355,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 86.121685,
-   "end_time": "2024-01-11T05:43:58.663894",
+   "duration": 92.252202,
+   "end_time": "2024-01-11T05:50:36.346115",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-11T05:42:32.542209",
+   "start_time": "2024-01-11T05:49:04.093913",
    "version": "2.4.0"
   }
  },
